# financial-analyzer

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: stack.md
engine/: __init__.py  api.py  main.py  requirements.txt
engine/data/: __init__.py  fetcher_company.py  fetcher_prices.py  pipeline.py  test_data.py  yf_session.py
engine/db/: __init__.py  connection.py  queries.py  schema.sql  test_db.py
engine/fundamental/: __init__.py  dcf.py  ratios.py  scoring.py  test_fundamental.py
engine/quant/: __init__.py  arima.py  forecast.py  garch.py  monte_carlo.py  test_quant.py
engine/technical/: __init__.py  indicators.py  signals.py  test_technical.py
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChartPage.css  ChartPage.tsx  FundamentalPanel.tsx  Panel.css  PriceChart.tsx  QuantPanel.tsx  Spinner.tsx  TechnicalPanel.tsx
src/hooks/: useEngine.ts
