[package]
name    = "financial-analyzer"
version = "0.1.0"
edition = "2021"

[lib]
name = "financial_analyzer_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "financial-analyzer"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri         = { version = "2", features = ["wry"] }
tauri-plugin-shell = "2"

[target.'cfg(target_os = "linux")'.dependencies]
webkit2gtk    = { version = "2.0", features = ["v2_16"] }
serde         = { version = "1", features = ["derive"] }
serde_json    = "1"
tokio         = { version = "1", features = ["full"] }

[profile.release]
panic   = "abort"
codegen-units = 1
lto     = true
opt-level = "s"
strip   = true
